@@ -1,0 +1,18 @@
+/* XPM */
+static char * noflag_xpm[] = {
+"21 14 1 1",
+" 	g None",
+"                     ",
+"                     ",
+"                     ",
+"                     ",
+"                     ",
+"                     ",
+"                     ",
+"                     ",
+"                     ",
+"                     ",
+"                     ",
+"                     ",
+"                     ",
+"                     "};
