@@ -1,3 +1,7 @@
+Nov 01, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
+- add country statistics
+- use an empty flag for countries without flag for proper alignment
+
 Oct 17, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
 - UT2004 master server support, needs qstat from CVS
 
